# wayquit

./: README.md  pyproject.toml
data/: wayquit.conf
src/: wayquit.py
